# InvestBudAi

./: README.md
investbud-core/: .dockerignore  .gitignore  (+5 more)
investbud-core/backend/: Dockerfile.confirming-node  README.md  gcn.akash.yaml  main.py  pyproject.toml  start_api.py
investbud-core/backend/api/: __init__.py  main.py
investbud-core/backend/docs/: DKG_CONFIRMING_NODE.md  DKG_INTEGRATION.md  FINANCIAL_METHODOLOGY.md
investbud-core/backend/examples/: advanced_metrics_demo.py  ws_live_client.py
investbud-core/backend/models/: backtest_results.pkl  live_agent_decisions.pkl  regime_classifier.pkl
investbud-core/backend/scripts/: analyze_wallet.py  check_nan_values.py  init_db.py  migrate_chat_schema.py  optimize_trading_filters.py  patch_x402.py  run_backtest.py  test_allocation_strategies.py  test_data_pipeline.py  test_timeseries_cv.py  train_classifier.py
investbud-core/backend/src/macrocrypto/analytics/: __init__.py  wallet_performance.py
investbud-core/backend/src/macrocrypto/config/: __init__.py  networks.py
investbud-core/backend/src/macrocrypto/data/: __init__.py  btc_data.py  combined_data.py  fred_data.py  wallet_analyzer.py
investbud-core/backend/src/macrocrypto/db/: __init__.py  models.py
investbud-core/backend/tests/: signature_example.py  test1.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py  test_dkg.py  test_model_metrics.py  test_news_endpoint.py  test_payment_retry.py  test_signal_with_fallback.py
investbud-core/backend/website/: data.json
investbud-core/gcn/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
investbud-core/gcn/investbud_gcn/: __init__.py  cli.py  confirming_node.py  dkg_service.py
(+55 files in other folders)
